fix PRESS0-3273 toast overlap with admin menu
plus fix menu order again

--- a/src/app/stylesheet.scss
+++ b/src/app/stylesheet.scss
@@ -632,7 +632,7 @@ body.toplevel_page_bluehost {
     padding-right: 2rem;
 }
 
-
+// fix for marketplace page styles PRESS0-3272
 .wppbh-app-marketplace-page {
     width: 100%;
 
@@ -642,4 +642,9 @@ body.toplevel_page_bluehost {
         margin-left: auto;
         align-items: center;
     }
+}
+
+// fix for performance toast notices PRESS0-3273
+.nfd-root aside.nfd-notifications {
+    z-index: 9991; // admin menu has z-index 9990
 }
